--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,8 @@
   <groupId>technologies.simple</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+  <properties>
+     <maven.compiler.source>1.10</maven.compiler.source>
+     <maven.compiler.target>1.10</maven.compiler.target>
+</properties>
 </project>
