--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,17 @@
   <groupId>technologies.simple</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
-  <properties>
-     <maven.compiler.source>1.10</maven.compiler.source>
-     <maven.compiler.target>1.10</maven.compiler.target>
-</properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+         <configuration>
+          <source>1.10</source>
+          <target>1.10</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
